--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@preact/signals-react": "^1.3.2",
     "constate": "^3.3.2",
     "daisyui": "^2.51.6",
     "react": "^18.2.0",
